# wyoming_openrouter

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  healthcheck.sh  ignore-spelling-words.txt  pyproject.toml  repository.yaml  run.sh  tasks.json.example
.github/scripts/: smoke_test.py
.github/workflows/: job-docker.yml  job-prek.yml  job-test.yml  on-merge.yml  on-pr.yml
scripts/: __init__.py  ha_app_configure_all_models.sh  ha_app_install.sh  ha_app_uninstall.sh  ha_test_announce_all_tts.sh  model_languages.py  model_matrix.py  stt_compare.py
tests/: __init__.py  test_config.py  test_ha_metrics.py  test_handler.py  test_model_languages.py  test_mp3_decode.py  test_openrouter.py  test_probe.py  test_stt_handler.py  test_tts_handler.py  test_versions.py
translations/: en.yaml
wyoming_openrouter/: __init__.py  __main__.py  config.py  ha_metrics.py  handler.py  mp3_decode.py  openrouter.py  probe.py  stt_handler.py  tts_handler.py  util.py
