[project]
name = "wyoming-openrouter"
version = "0.1.0"
description = "Wyoming protocol server for OpenRouter speech-to-text (STT) APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Janne Snabb" }
]
keywords = ["wyoming", "stt", "asr", "openrouter", "speech-to-text", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "wyoming>=1.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
    "prek>=0.3.4",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ty>=0.0.19",
]

[project.scripts]
wyoming-openrouter = "wyoming_openrouter.__main__:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wyoming_openrouter*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
profile = "black"
src_paths = "tests"
line_length = 80
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B"]
exclude = ["__pycache__", ".git", ".venv"]
ignore = ["E501"]
